Some styling fixes: - remove unneccessary border on chatlist - changer caret color of sarch input to the same color as the placeholder - make dialog height overlap navbar/composer for fixed dialogs

--- a/scss/dialogs/_delta-dialog.scss
+++ b/scss/dialogs/_delta-dialog.scss
@@ -88,7 +88,7 @@
 }
 
 .FixedDeltaDialog {
-  top: 50px;
+  top: 25px;
   width: 400px;
   height: calc(100% - 50px);
 }
