--- a/scss/misc/_search-input.scss
+++ b/scss/misc/_search-input.scss
@@ -11,6 +11,7 @@ input.search-input {
   border: 0px;
   font-size: 18px;
   background-color: transparent;
+  caret-color: var(--navBarSearchPlaceholder);
 
   &.wrap {
     margin-left: 40px;
