--- a/scss/overwrites/_bp3-overwrites.scss
+++ b/scss/overwrites/_bp3-overwrites.scss
@@ -2,7 +2,7 @@ $bp3-dialog-radius: 2px;
 
 .bp3-dialog {
   position: absolute !important;
-  max-height: calc(100vh - 90px);
+  max-height: calc(100vh - 50px);
   max-width: 90vw;
   margin: 0px;
   padding: 0px;
